1118 - Add Entity Framwork / Mirgration / DbContext

--- a/MovieShop.Web/appsettings.json
+++ b/MovieShop.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MovieShopDbConnection": "Server=DESKTOP-3EKS22I\\SQL_SERVER;Integrated Security=true;Initial Catalog=MovieShopMVCDb;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,3 +12,4 @@
   },
   "AllowedHosts": "*"
 }
+
