--- a/MovieShop.Core/MovieShop.Core.csproj
+++ b/MovieShop.Core/MovieShop.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="ServiveInterfaces\" />
   </ItemGroup>
 
   <ItemGroup>
