12/09_add_rating_ignore_in_ET

--- a/MovieShopAPI/appsettings.json
+++ b/MovieShopAPI/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "MovieShopDbConnection": "Server=DESKTOP-3EKS22I\\SQL_SERVER;Integrated Security=true;Initial Catalog=MovieShopMVCDb;"
   },
-
+  "clientSPAUrl": "http://localhost:4200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
