--- a/MovieShop.Web/appsettings.json
+++ b/MovieShop.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MovieShopDbConnection": "Server=DESKTOP-3EKS22I\\SQL_SERVER;Integrated Security=true;Initial Catalog=MovieShopMVCDb;"
+    "MovieShopDbConnection": "Server=AaronRog; Integrated Security=true;Initial Catalog=MovieShopMVCDb;"
   },
 
   "Logging": {
